--- a/CSS/style.css
+++ b/CSS/style.css
@@ -172,3 +172,68 @@ img {
    font-size: 13px;
    line-height: 16px;
 }
+
+/*----------------------------------Adaptar pantalla a dispositivis mas pequeños-------------------------------*/
+@media (max-width: 780px){
+    body {
+        margin: 0;
+        padding: 30px;        
+    }
+    .flex-principal {
+        display: block;
+        margin: 0px;
+        padding: 0;
+        height: 10px;
+    }   
+
+    .flex-list {
+        padding: 0;
+        margin: 0;        
+    }
+
+    .flex-loveproducts{        
+        height: 200px;  
+        margin-right: 0px;        
+    }
+    
+    .rated-card {
+        border: 0;
+        margin: 0;
+        margin-top: 50px;
+        padding: 0;
+        
+    }
+    
+    .rated-card .list-2 {
+        margin-left: 15px;
+    }
+
+    
+    .rated-card .list-3 {
+        margin-left: 15px;        
+    }    
+
+    .flex-card {               
+       margin: 0;
+       margin-top: 400px;
+       flex-direction: column;              
+       padding: 0;       
+    }
+    
+    .attribution{
+        margin-top: 450px;
+    }
+
+    .user-card{
+        margin-top: 100px;        
+    }   
+
+    .user-card-2{
+        margin-top: 0px;
+        
+    }
+
+    .user-card .user-card-3{
+        margin-top: 0px;        
+    }   
+}
