--- a/CSS/style.css
+++ b/CSS/style.css
@@ -177,6 +177,7 @@ img {
 @media (max-width: 780px){
     body {
         margin: 0;
+        marging-left: 40px;
         padding: 30px;        
     }
     .flex-principal {
